[gd_scene load_steps=7 format=2]

[ext_resource path="res://font_s28.tres" type="DynamicFont" id=1]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/MainMenu/ExtrasMenu.gd" type="Script" id=3]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.631373 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="ExtrasMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wz" type="Label" parent="."]
anchor_left = 0.346
anchor_top = 0.031
anchor_right = 0.651
anchor_bottom = 0.134
margin_left = -0.2677
margin_top = 0.332952
margin_right = 0.332275
margin_bottom = 0.172951
custom_fonts/font = SubResource( 1 )
text = "WARZONE 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="wz"]
anchor_left = 0.626
anchor_top = 1.0
anchor_right = 1.664
anchor_bottom = 1.475
margin_left = -0.107086
margin_top = -1.87512
margin_right = 0.0349121
margin_bottom = -0.0251236
custom_fonts/font = ExtResource( 1 )
text = "Developed by : SuperRaptor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="src_code" type="Button" parent="."]
anchor_left = 0.368
anchor_top = 0.546
anchor_right = 0.637
anchor_bottom = 0.662
margin_left = 0.499725
margin_top = 0.25705
margin_right = 8.17975
margin_bottom = -0.26297
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Source code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bug" type="Button" parent="."]
anchor_left = 0.328
anchor_top = 0.736
anchor_right = 0.701
anchor_bottom = 0.855
margin_left = -0.16156
margin_top = 0.010498
margin_right = -0.601562
margin_bottom = 0.330505
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Report Bugs / Feature Request"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msgDev" type="Button" parent="."]
anchor_left = 0.336
anchor_top = 0.327
anchor_right = 0.666
anchor_bottom = 0.447
margin_left = 0.242157
margin_top = 0.258316
margin_right = 0.842224
margin_bottom = -0.141693
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Message Dev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.798
anchor_top = 0.832
anchor_right = 0.927
anchor_bottom = 0.931
margin_left = -0.440063
margin_top = -0.0400391
margin_right = 0.439941
margin_bottom = -0.320068
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="src_code" to="." method="_on_src_code_pressed"]
[connection signal="pressed" from="bug" to="." method="_on_bug_pressed"]
[connection signal="pressed" from="msgDev" to="." method="_on_msgDev_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
